--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,59 +1,211 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-  Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
+:root {
+  --primary: #ff9f00;
+  --secondary: #95989a;
+  --text-color: #fff;
+  --text-secondary: #000;
+  --text-tertiary: #5d5d5d;
 }
 
 * {
-  box-sizing: border-box;
+  font-family: "Montserrat";
+  margin: 0;
+  padding: 0;
 }
 
-.section {
-  padding-top: 50px;
-  padding-bottom: 50px;
-  position: relative;
+/* Event form */
+header {
+  background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url("../src/app/assets/images/casa_solar.jpg");
+  background-position: center;
+  background-size: cover;
+  height: 85vh;
+  color: var(--text-color);
 }
 
-.hero {
-  height: 100vh;
-  max-height: -webkit-fill-available;
-  justify-content: center;
+.topo {
+  display: flex;
+  justify-content: space-between;
   align-items: center;
+  margin: 0px auto;
+  width: 960px;
+  height: 100px;
+  max-width: 960px;
+}
+
+.logo {
+  margin-top: 20px;
+}
+
+nav ul {
+  display: flex;
+  width: 400px;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  justify-content: space-between;
+}
+
+nav ul li a {
+  text-decoration: none;
+  color: var(--text-color);
+  font-size: 16px;
+}
+
+.content {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin-top: 30px;
+}
+
+#disclaimer h2,
+#disclaimer .event-date {
+  color: var(--primary);
+}
+
+#disclaimer h2 {
+  font-size: 3em;
+  margin-bottom: 1em;
+}
+
+#disclaimer .about-event {
+  font-size: 2em;
+  text-transform: uppercase;
+  max-width: 350px;
+  font-weight: bold;
+  margin-bottom: 1em;
+}
+
+#disclaimer p {
+  font-size: 1.2em;
+  margin-bottom: 0.3em;
+}
+
+#disclaimer .event-date {
+  font-weight: bold;
+}
+
+#subscription-form {
+  max-width: 50%;
+}
+
+/* Benefits section */
+.key-benefits h2 {
+  background-color: var(--secondary);
+  text-align: center;
+  padding: 2em;
+  font-weight: 700;
+}
+
+.benefits {
+  display: flex;
+  justify-content: space-around;
+  padding: 4em;
+  width: 80%;
+  margin: 0 auto;
+}
+
+.benefit {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-width: 20%;
+  color: var(--text-tertiary);
+}
+
+.benefit .title{
+  font-weight: bold;
+  font-size: 20px;
+  margin-bottom: 20px;
+}
+
+.benefit .benefit-img {
+  width: 250px;
+  height: 250px;
+  border-radius: 50%;
+  background-size: cover;
+  background-position: center;
+  margin-bottom: 1em;
+}
+
+#benefit-1 {
+  background-image: url("../src/app/assets/images/casa_vert_1.jpg");
+}
+
+#benefit-2 {
+  background-image: url("../src/app/assets/images/casa_vert_2.jpg");
+}
+
+#benefit-3 {
+  background-image: url("../src/app/assets/images/telhado.jpg");
+}
+
+/* Event location */
+.location {
+  height: 400px;
+  background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)),
+    url("../src/app/assets/images/casa_3.jpg");
+  background-position: center;
+  background-size: cover;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  color: var(--text-color);
+  margin-bottom: 3em;
+}
+
+#address,
+#about-location {
+  max-width: 30%;
+}
+
+#address {
   display: flex;
 }
 
-.hero .container {
-  padding-top: 60px;
+#address i {
+  color: var(--primary);
+  font-size: 4em;
+  margin-right: 0.5em;
 }
 
-.header {
-  padding: 0 15px;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  z-index: 100;
-  background: white;
-}
-.header .nav-link {
-  margin-left: 30px;
+#address-details {
+  text-align: center;
+  font-size: 1.3em;
 }
 
-.header .navbar {
-  padding: 10px 0;
-  line-height: 30px;
-  height: 60px;
-  width: 100%;
-  background: #fff;
+#about-location h3 {
+  color: var(--primary);
+  font-size: 2.5em;
+  margin-bottom: 1em;
+  /* text-transform: uppercase; */
 }
 
+#about-location p {
+  line-height: 1.5em;
+}
+
+
+/* Footer */
 .footer {
-  padding-bottom: 5px;
+  text-align: center;
+  color: var(--secondary);
+  height: 250px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.footer h3 {
+  font-size: 1.8em;
+  margin-bottom: 0.5em;
+}
+
+.footer p:nth-child(2) {
+  margin-bottom: 1em;
+  font-size: 1.2em;
+}
+
+.footer span {
+  font-weight: bold;
 }
