--- a/styles/globals.css
+++ b/styles/globals.css
@@ -113,7 +113,7 @@ nav ul li a {
   color: var(--text-tertiary);
 }
 
-.benefit .title{
+.benefit .title {
   font-weight: bold;
   font-size: 20px;
   margin-bottom: 20px;
@@ -143,8 +143,7 @@ nav ul li a {
 /* Event location */
 .location {
   height: 400px;
-  background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)),
-    url("../src/app/assets/images/casa_3.jpg");
+  background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url("../src/app/assets/images/casa_3.jpg");
   background-position: center;
   background-size: cover;
   display: flex;
@@ -185,7 +184,6 @@ nav ul li a {
   line-height: 1.5em;
 }
 
-
 /* Footer */
 .footer {
   text-align: center;
@@ -209,3 +207,88 @@ nav ul li a {
 .footer span {
   font-weight: bold;
 }
+
+/* Mobile */
+@media screen and (max-width: 450px) {
+  /* Event form */
+
+  #event-subscription {
+    flex-direction: column;
+    height: auto;
+    width: 450px;
+  }
+
+  .content {
+    flex-direction: column;
+    height: auto;
+  }
+
+  .topo {
+    flex-direction: column;
+    align-items: center;
+    height: auto;
+    width: 100%;
+  }
+
+  nav {
+    display: none;
+  }
+
+  #subscription-form {
+    max-width: 100%;
+  }
+
+  /* Benefits section */
+  .key-benefits {
+    flex-direction: column;
+    width: 450px;
+  }
+
+  .key-benefits h2 {
+    text-align: center;
+  }
+
+    .benefits {
+    flex-direction: column;
+  }
+
+  .benefit {
+    max-width: 100%;
+  }
+}
+
+/* Event location */
+  .location {
+    flex-direction: column;
+    height: auto;
+    text-align: center;
+    width: 450px;
+  }
+
+  #address {
+    order: 2;
+    flex-direction: column;
+    max-width: 100%;
+  }
+
+  #address i {
+    margin: 0.3em 0;
+  }
+
+  #about-location {
+    order: 1;
+    max-width: 100%;
+    margin-top: 1rem;
+  }
+
+  #about-location h3 {
+    margin-bottom: 0;
+  }
+
+  #about-location p {
+    display: none;
+  }
+
+  .footer {
+    width: 450px;
+  }
